; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/lib/extr_mpfs.c_mlx5_mpfs_cleanup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/lib/extr_mpfs.c_mlx5_mpfs_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_core_dev = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.mlx5_mpfs* }
%struct.mlx5_mpfs = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mlx5_mpfs_cleanup(%struct.mlx5_core_dev* %0) #0 {
  %2 = alloca %struct.mlx5_core_dev*, align 8
  %3 = alloca %struct.mlx5_mpfs*, align 8
  store %struct.mlx5_core_dev* %0, %struct.mlx5_core_dev** %2, align 8
  %4 = load %struct.mlx5_core_dev*, %struct.mlx5_core_dev** %2, align 8
  %5 = getelementptr inbounds %struct.mlx5_core_dev, %struct.mlx5_core_dev* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load %struct.mlx5_mpfs*, %struct.mlx5_mpfs** %6, align 8
  store %struct.mlx5_mpfs* %7, %struct.mlx5_mpfs** %3, align 8
  %8 = load %struct.mlx5_core_dev*, %struct.mlx5_core_dev** %2, align 8
  %9 = call i32 @MLX5_ESWITCH_MANAGER(%struct.mlx5_core_dev* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  br label %27

12:                                               ; preds = %1
  %13 = load %struct.mlx5_mpfs*, %struct.mlx5_mpfs** %3, align 8
  %14 = getelementptr inbounds %struct.mlx5_mpfs, %struct.mlx5_mpfs* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @hlist_empty(i32 %15)
  %17 = icmp ne i32 %16, 0
  %18 = xor i1 %17, true
  %19 = zext i1 %18 to i32
  %20 = call i32 @WARN_ON(i32 %19)
  %21 = load %struct.mlx5_mpfs*, %struct.mlx5_mpfs** %3, align 8
  %22 = getelementptr inbounds %struct.mlx5_mpfs, %struct.mlx5_mpfs* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @bitmap_free(i32 %23)
  %25 = load %struct.mlx5_mpfs*, %struct.mlx5_mpfs** %3, align 8
  %26 = call i32 @kfree(%struct.mlx5_mpfs* %25)
  br label %27

27:                                               ; preds = %12, %11
  ret void
}

declare dso_local i32 @MLX5_ESWITCH_MANAGER(%struct.mlx5_core_dev*) #1

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @hlist_empty(i32) #1

declare dso_local i32 @bitmap_free(i32) #1

declare dso_local i32 @kfree(%struct.mlx5_mpfs*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
